# Kiraak

./: CMakeLists.txt  LICENSE  README.md  main.cpp
language/ast_nodes/: ASTNode.h  ASTNodes.cpp  ASTNodes.h  _ASTNode.h
language/context/: Context.h  SymbolTable.h
language/datatypes/: Boolean.h  DataTypes.cpp  DataTypes.h  Datatype.h  Number.h  _Datatype.h
language/errors/: Errors.cpp  Errors.h
language/interpreter/: Interpreter.cpp  Interpreter.h
language/lexer/: Lexer.cpp  Lexer.h
language/parser/: Parser.cpp  Parser.h
language/syntax_types/: SyntaxTypes.cpp  SyntaxTypes.h
language/token/: Keywords.h  ParsePosition.h  Token.cpp  Token.h  TokenTypes.h
language/utils/: ResultWrappers.h  Utils.h
